--- a/index.css
+++ b/index.css
@@ -170,6 +170,8 @@ body {
 .profileparagraph {
     color: #333;
     font-size: large;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .about .box {
@@ -197,16 +199,22 @@ body {
 .experienceParagraph1 {
     color: #333;
     font-size: medium;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .experienceParagraph2 {
     color: #333;
     font-size: medium;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .experienceParagraph3 {
     color: #333;
     font-size: medium;
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .skills .box {
